Browser specific fixes attempt 7 (Lines cutting off on chrome mobile)

--- a/css/main.css
+++ b/css/main.css
@@ -109,7 +109,7 @@ body {
 .line {
     position: absolute;
     left: 0;
-    width: 125vw;
+    width: 150vw;
     height: 100%;
     background: repeating-linear-gradient(
       100deg,
